--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
           <p data-aos="fade-up" data-aos-duration="3000" data-aos-delay="200">Halo, Aku Haris. Bisa Dibilang Manusia Yang Ngebosenin, Umurku 17 Tahun Dan Aku Masih Jadi Beban Orang Tua + Nolep, Hobiku Baca Komik Ilegal Dan Ngehabisin Nasi Dirumah. MOTTO Hidup : "Lakukan Yang Dapat Keuntungan Tinggalkan Yang Merugikan." Anjas Keren Ga? Lanjut, 
             Makanan Favoritku Yaitu Apa Aja Selagi Enak Di Mulut. Tujuan Hidup ku Menjadi Diri Sendiri Yang Baik Dan rajin Ibadah, Mempunyai Banyak uang Sampai Bisa Kepake 7 Ketururan, Mempunyai Banyak Bisnis/Startup, Memiliki Tanah Beratus Ratus Ribu/Berjuta Juta Hektar Untuk Dijadikan Pertanian, Hidup Sederhana, Tenang Dan Damai Di Salah Satu Kampung Yang Ada Di Jogja,
             Mempunyai Pertenakan Sapi, Kambing, Ayam, Membantu Orang Yang Sedang Kesusahan, Mencoba Seluruh Makanan Yang Ada Di Dunia, Menguasai Bumi, Jadi Presiden Di Mars, Melawan 1000 Orang sekaligus, Rank ML MYTHIC GLORy (minimal legend lah), Pergi Ke Dimensi Lain, Menguasai Semua Elemen Api, Air, Tanah,
-            Angin, Listrik, Logam, Dll. Sebenarnya Masih Banyak Lagi. Semoga Tujuan Hidupku Terjadi Pada Diriku, Berharap Aja Dulu. 
+            Angin, Listrik, Logam, Dll. Sebenarnya Masih Banyak Lagi. Semoga Tujuan Hidupku Terjadi Pada Diriku, Berharap Aja Dulu. MAAP ALAY🙏🙏🙏
 
           </p>
           <p data-aos="fade-up" data-aos-duration="3000" data-aos-delay="400">Dah Gitu Aja Gatau Mau Ketik Apa Lagi, Kalau Ada Pertanyaan Tentang Apapun Itu DM IG ku aja Pasti ku Jawab. keknya......              DAH</p>
